[package]
name = "stock-tracking-cli"
version = "0.1.0"
authors = ["Michael Kennedy <michaeljkennedy@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.3"
regex = "1.4"
yahoo_finance_api = { version = "1.1", features = ["blocking"] }
