[package]
name = "stock-tracking-cli"
version = "0.1.0"
authors = ["Michael Kennedy <michaeljkennedy@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.3"
chrono = "0.4"
clap = "2.3"
num_cpus = "1.13"
regex = "1.4"
yahoo_finance_api = "1.1"
tokio = "1.2"
